# cuda-examples

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  TODO.md  udacity-344-notes.md
examples/: CMakeLists.txt
examples/common/: cuda_helper.h  gpu_timer.h  random.h  stopwatch.h
examples/device/: README.md  device_query.cpp
examples/hello/: README.md  hello.cu
examples/histogram/: histo.cu
examples/matmul/: README.md  matmul.cu
examples/matrix_multiple/: matrix_multiple.cu
examples/reduce/: README.md  reduce_sum.cu
examples/scan/: README.md  blelloch_scan.cu  hillis_steele_scan.cu
examples/stream/: async_stream.cu
examples/transpose/: matrix_transpose.cu
examples/vector_add/: vector_add.cu
examples/warp_shuffle/: shuffle.cu
examples/winsum/: winsum.cu
notes/: gpu-architecture.md  gpu_architecture.md  udacity-cs344.md
